RESOLVED FIXED96539
REGRESSION(r106730): iframes with scrolling=no can't scroll to anchors
https://bugs.webkit.org/show_bug.cgi?id=96539
Summary REGRESSION(r106730): iframes with scrolling=no can't scroll to anchors
Nate Chapin
Reported 2012-09-12 12:08:13 PDT
Original report: http://code.google.com/p/chromium/issues/detail?id=119666 If an iframe with scrolling=no contains a link to an anchor in the same document, we do not properly scroll to the anchor when it is clicked. This appears to be a regression from http://trac.webkit.org/changeset/106730 .
Attachments
patch (5.61 KB, patch)
2012-09-12 12:18 PDT, Nate Chapin
no flags
Patch for landing (5.77 KB, patch)
2012-10-02 15:42 PDT, Nate Chapin
no flags
Nate Chapin
Comment 1 2012-09-12 12:18:54 PDT
Antonio Gomes
Comment 2 2012-10-02 12:44:20 PDT
Comment on attachment 163670 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=163670&action=review > Source/WebCore/rendering/RenderLayer.cpp:1793 > + if ((frameElement && frameElement->scrollingMode() != ScrollbarAlwaysOff) || (!frameView->frame()->eventHandler()->autoscrollInProgress() && !frameView->wasScrolledByUser())) { it is turning to be a long line.
Nate Chapin
Comment 3 2012-10-02 15:42:15 PDT
Created attachment 166765 [details] Patch for landing
WebKit Review Bot
Comment 4 2012-10-02 16:14:49 PDT
Comment on attachment 166765 [details] Patch for landing Clearing flags on attachment: 166765 Committed r130226: <http://trac.webkit.org/changeset/130226>
WebKit Review Bot
Comment 5 2012-10-02 16:14:52 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 6 2012-10-02 16:45:34 PDT
Comment on attachment 163670 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=163670&action=review >> Source/WebCore/rendering/RenderLayer.cpp:1793 >> + if ((frameElement && frameElement->scrollingMode() != ScrollbarAlwaysOff) || (!frameView->frame()->eventHandler()->autoscrollInProgress() && !frameView->wasScrolledByUser())) { > > it is turning to be a long line. An inline helper function could spread this out over multiple lines and allow a comment on each line.
Antonio Gomes
Comment 7 2012-10-02 19:43:24 PDT
> > > > it is turning to be a long line. > > An inline helper function could spread this out over multiple lines and allow a comment on each line. Nate, lets please go for it.
Note You need to log in before you can comment on or make changes to this bug.