Source/WebCore: iframes with scrolling=no can't scroll to anchors https://bugs.webkit.org/show_bug.cgi?id=96539

Reviewed by Antonio Gomes.

This appears to have regressed in r106730. This patch matches Firefox's behavior.

Test: fast/dom/HTMLAnchorElement/anchor-in-noscroll-iframe.html

* page/EventHandler.h:
* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::scrollRectToVisible): Currently scrolls are always forbidden
   if scrollbars are explicitly disabled. This adds an exception for scrolls that
   are not user-initiated and are not autoscrolls.

LayoutTests: Test for https://bugs.webkit.org/show_bug.cgi?id=96539.

Reviewed by Antonio Gomes.

* fast/dom/HTMLAnchorElement/anchor-in-noscroll-iframe-expected.txt: Added.
* fast/dom/HTMLAnchorElement/anchor-in-noscroll-iframe.html: Added.
* fast/dom/HTMLAnchorElement/resources: Added.
* fast/dom/HTMLAnchorElement/resources/iframe-with-anchor.html: Added.


Canonical link: https://commits.webkit.org/116225@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130226 268f45cc-cd09-0410-ab3c-d52691b4dbfc